<resources>
    <string name="app_name">Storybook</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hello">Hello</string>
    <string name="login_desc">Sign in to your account</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="login_register_desc">Don\'t have an account?</string>
    <string name="register_title">Create account</string>
    <string name="title_mobile">Mobile</string>
    <string name="title_name">Name</string>
    <string name="validation_must_be_filled">Must be filled</string>
    <string name="title_stories">Stories</string>
    <string name="title_circle">Circle</string>
    <string name="title_username">Username</string>
    <string name="title_edit_profile">Edit Profile</string>

    <string name="profile_username">\@%1$s</string>
    <string name="story_likes">(%1$d likes)</string>
    <string name="slider_position">%1$d/%2$d</string>
    <string name="title_activity_detail_story">Detail Story</string>
    <string name="title_comment">Comment</string>
    <string name="title_follow">Follow</string>
    <string name="title_comments">Comments</string>
    <string name="title_create_story">Create a Story</string>
    <string name="desc_create_story">Create stories by choosing from 150+ stunning templates. Use our advanced text tools with new fonts and get creative with background colors, textures, stickers and more.</string>
    <string name="title_your_story">Your Story</string>
    <string name="title_choose_image">Choose Image</string>
    <string name="title_title">Title</string>
    <string name="title_upload_image">Upload Image</string>
    <string name="premium_desc">Storybook+ access all app features. This subscription automatically renews for IDR 20,000.00 per month. Subscriptions will automatically renew unless cancelled within 24 hours before the end of the current period. Payment will be charged to your Google Account at the confirmation of purchase. You can manage and cancel your subscription by going to your account settings in the Google Play Store - but seriously, you won\'t want to.</string>
</resources>
