<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.add.image.ResultImageActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:src="@drawable/ic_back_black" />

    <TextView
        android:id="@+id/title_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/title_your_story"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/img_upload"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/title_result"
        android:layout_alignTop="@id/img_result"
        android:layout_alignBottom="@id/img_result"
        android:layout_alignStart="@id/img_result"
        android:layout_alignEnd="@id/img_result"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

    <ImageView
        android:id="@+id/img_result"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/title_result"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_result"
        android:layout_margin="@dimen/normal_margin"
        android:visibility="invisible"
        app:cardCornerRadius="32dp"
        app:cardElevation="@dimen/normal_elevation">

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_title_black"
            android:drawablePadding="@dimen/normal_padding"
            android:hint="@string/title_title"
            android:inputType="text"
            android:padding="@dimen/normal_padding" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_edt_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/small_margin"
        android:paddingStart="@dimen/normal_padding"
        android:paddingEnd="@dimen/normal_padding"
        android:text="@string/title_create_story"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:cornerRadius="@dimen/normal_radius"
        app:icon="@drawable/ic_book_black"
        app:iconTint="@android:color/white"
        app:rippleColor="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_margin"
        android:backgroundTint="@color/colorSecondButton"
        android:paddingStart="@dimen/normal_padding"
        android:paddingEnd="@dimen/normal_padding"
        android:text="@string/title_choose_image"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:cornerRadius="@dimen/normal_radius"
        app:icon="@drawable/ic_image_black"
        app:iconTint="@android:color/white"
        app:rippleColor="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_margin"
        android:backgroundTint="@color/colorSecondButton"
        android:paddingStart="@dimen/normal_padding"
        android:paddingEnd="@dimen/normal_padding"
        android:text="@string/title_upload_image"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:cornerRadius="@dimen/normal_radius"
        app:icon="@drawable/ic_file_upload_black"
        app:iconTint="@android:color/white"
        app:rippleColor="@android:color/white" />

</RelativeLayout>