<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context=".ui.auth.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bg_login"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bg_login"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txt_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bg_login"
            android:layout_centerHorizontal="true"
            android:text="@string/login_hello"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="42sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_login_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/large_margin"
            android:text="@string/login_desc"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_login_desc"
            android:layout_margin="@dimen/normal_margin"
            app:cardCornerRadius="32dp"
            app:cardElevation="@dimen/large_elevation">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_email_black"
                android:drawablePadding="@dimen/normal_padding"
                android:hint="@string/title_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/normal_padding" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_edt_email"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:cardCornerRadius="32dp"
            app:cardElevation="@dimen/large_elevation">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_lock_black"
                android:drawablePadding="@dimen/normal_padding"
                android:hint="@string/title_password"
                android:inputType="textPassword"
                android:padding="@dimen/normal_padding" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_login"
            style="@style/customCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_edt_password"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="32dp"
            app:cardElevation="@dimen/large_elevation">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/normal_margin"
                android:text="Sign in"
                android:textColor="@android:color/white" />

        </androidx.cardview.widget.CardView>

        <!--        <RelativeLayout-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@+id/card_edt_password"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:layout_marginTop="@dimen/extra_large_margin"-->
        <!--            android:layout_marginBottom="@dimen/large_margin">-->

        <!--            <TextView-->
        <!--                android:id="@+id/txt_sign_in"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_centerVertical="true"-->
        <!--                android:text="Sign in"-->
        <!--                android:textColor="@color/colorPrimaryDark"-->
        <!--                android:textSize="32sp"-->
        <!--                android:textStyle="bold" />-->

        <!--            <androidx.cardview.widget.CardView-->
        <!--                android:id="@+id/btn_login"-->
        <!--                style="@style/customCard"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_centerVertical="true"-->
        <!--                android:layout_margin="@dimen/normal_margin"-->
        <!--                android:layout_toEndOf="@+id/txt_sign_in"-->
        <!--                app:cardCornerRadius="24dp"-->
        <!--                app:cardElevation="4dp">-->

        <!--                <ImageView-->
        <!--                    android:layout_width="40dp"-->
        <!--                    android:layout_height="40dp"-->
        <!--                    android:src="@color/colorPrimary" />-->

        <!--                <ImageView-->
        <!--                    android:layout_width="40dp"-->
        <!--                    android:layout_height="40dp"-->
        <!--                    android:src="@drawable/ic_navigate_next"-->
        <!--                    android:tint="@android:color/white" />-->

        <!--            </androidx.cardview.widget.CardView>-->

        <!--        </RelativeLayout>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/normal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_desc"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/txt_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="Create"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>